// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Finder API #expand should accept a 'sourceEvent' argument 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item expanded" role="button" draggable="false" aria-expanded="true" tabindex="0">
        <!--v-if--><input type="checkbox" aria-label="Test 11">
        <div class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 12">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 13">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 14">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <div class="list-container">
      <div class="list">
        <!--v-if-->
        <div class="item" role="button" draggable="false" tabindex="-1">
          <!--v-if--><input type="checkbox" aria-label="Test 111">
          <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 111</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <div class="item custom-class expanded" role="button" draggable="false" tabindex="0">
          <!--v-if--><input type="checkbox" aria-label="Test 112">
          <div class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 112</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Finder API #expand should expand the given item and emit the 'expand' event 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item expanded" role="button" draggable="false" aria-expanded="true" tabindex="0">
        <!--v-if--><input type="checkbox" aria-label="Test 11">
        <div class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 12">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 13">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 14">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <div class="list-container">
      <div class="list">
        <!--v-if-->
        <div class="item" role="button" draggable="false" tabindex="-1">
          <!--v-if--><input type="checkbox" aria-label="Test 111">
          <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 111</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <div class="item custom-class expanded" role="button" draggable="false" tabindex="0">
          <!--v-if--><input type="checkbox" aria-label="Test 112">
          <div class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 112</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Finder Drag & Drop should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <div class="drop-zone">
        <!--v-if-->
      </div>
      <div class="item draggable" role="button" draggable="true" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <div class="drop-zone">
        <!--v-if-->
      </div>
      <div class="item draggable" role="button" draggable="true" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <div class="drop-zone">
        <!--v-if-->
      </div>
      <div class="item draggable" role="button" draggable="true" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <div class="drop-zone">
        <!--v-if-->
      </div>
      <div class="item draggable" role="button" draggable="true" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <div class="drop-zone last">
        <!--v-if-->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder Selection should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if--><input type="checkbox" aria-label="Test 11">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 12">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 13">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if--><input type="checkbox" aria-label="Test 14">
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder should match snapshot 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder should match snapshot with a custom arrow component 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div><span theme="[object Object]" expanded="false" item="[object Object]"></span>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div><span theme="[object Object]" expanded="false" item="[object Object]"></span>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div><span theme="[object Object]" expanded="false" item="[object Object]"></span>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder should match snapshot with a custom item component 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if--><span class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</span>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if--><span class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</span>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if--><span class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</span>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if--><span class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</span>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder should match snapshot with an updated tree 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 31</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder should match snapshot with custom theme 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list" style="border-color: #eee; border-width: 3px;">
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div class="arrow" style="border-color: #555;"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow" style="border-color: #555;"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow" style="border-color: #555;"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder should match snapshot with default expanded 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item expanded" role="button" draggable="false" aria-expanded="true" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <div class="list-container">
      <div class="list">
        <!--v-if-->
        <div class="item" role="button" draggable="false" tabindex="-1">
          <!--v-if-->
          <!--v-if-->
          <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 111</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <div class="item custom-class expanded" role="button" draggable="false" tabindex="0">
          <!--v-if-->
          <!--v-if-->
          <div class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 112</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with expanded item and emit event 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item expanded" role="button" draggable="false" aria-expanded="true" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="true" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <div class="list-container">
      <div class="list">
        <!--v-if-->
        <div class="item" role="button" draggable="false" tabindex="0">
          <!--v-if-->
          <!--v-if-->
          <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 111</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
        <div class="item custom-class" role="button" draggable="false" tabindex="-1">
          <!--v-if-->
          <!--v-if-->
          <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 112</div>
          <!--v-if-->
        </div>
        <!--teleport start-->
        <!--teleport end-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`Finder should match snapshot with filter 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder should match snapshot with initial filter 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Finder should match snapshot with no children 1`] = `
<div class="tree-container">
  <!---->
</div>
`;

exports[`Finder should match snapshot with sort 1`] = `
<div class="tree-container">
  <div class="list-container">
    <div class="list">
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="0">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 14</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 13</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 12</div>
        <!--v-if-->
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
      <div class="item" role="button" draggable="false" aria-expanded="false" tabindex="-1">
        <!--v-if-->
        <!--v-if-->
        <div class="inner-item" item="[object Object]" expanded="false" dragged="false">Test 11</div>
        <div class="arrow"></div>
      </div>
      <!--teleport start-->
      <!--teleport end-->
      <!--v-if-->
    </div>
    <!---->
  </div>
</div>
`;
